# tribers

./: Cargo.toml  LICENSE-APACHE  README.md  changelog.org  notes.org  todo.org
pieces/tribers-bonder/: Cargo.toml
pieces/tribers-couper/: Cargo.toml
pieces/tribers-larder/: Cargo.toml
pieces/tribers-linker/: Cargo.toml
pieces/tribers-matrix/: Cargo.toml
pieces/tribers-snaper/: Cargo.toml
pieces/tribers-valver/: Cargo.toml
pieces/tribers-vitaer/: Cargo.toml
pieces/valver/: Cargo.toml
plates/esp32c3/: Cargo.toml
plates/platec/: Cargo.toml
plates/rp2040/: Cargo.toml
plates/tribers-esp32c3/: Cargo.toml
plates/tribers-rp2040/: Cargo.toml
scenes/spawner/utils/: greeter.proto
scenes/tribers-dossier/: Cargo.toml
scenes/tribers-dossier/src/: main.rs  snooper.json  toolkit.json
scenes/tribers-snooper/: Cargo.toml
scenes/tribers-snooper/src/: lib.rs  main.rs
scenes/tribers-spawner/: Cargo.toml  build.rs
scenes/tribers-spawner/src/: lib.rs  main.rs
scenes/tribers-spawner/utils/: greeter.proto  tribers.json  whisper.proto
