[workspace]
resolver = "2"
members = [
  "pieces/tribers-couper",
  "pieces/tribers-larder",
  "pieces/tribers-linker",
  "pieces/tribers-matrix",
  "pieces/tribers-snaper",
  "pieces/tribers-valver",
  "pieces/tribers-vitaer",
  "scenes/tribers-spawner",
]

[package]
name = "tribers"
version = "0.1.0"
edition = "2021"
authors = ["Cuprum Wangzuo <cuprumwz@foxmail.com>"]
description = "A embedded framework tribe use rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
