[package]
name = "tribers-valver"
version = "0.1.0"
edition = "2021"
authors = ["Cuprum Wangzuo <cuprumwz@foxmail.com>"]
description = "A embedded framework tribe use rust--sub module valver"
icense = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
