[package]
name = "tribers-snooper"
version = "0.1.0"
edition = "2021"
authors = ["Cuprum Wangzuo <cuprumwz@foxmail.com>"]
description = "A embedded framework tribe use rust--scenes for snooper"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tribers = { version = "0" }
clap = { version = "4" }
config = { version = "0.13.3" }
serialport = "4.2.2"
sigrok = { git = "https://github.com/cuprumwz/sigrok-rs.git" }
# sigrok = { git = "git@github.com:cuprumwz/sigrok-rs.git" }
