[package]
name = "tribers-spawner"
version = "0.1.0"
edition = "2021"
authors = ["Cuprum Wangzuo <cuprumwz@foxmail.com>"]
description = "A embedded framework tribe use rust--scenes for spawner"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tribers = { version = "0" }

tokio = { version = "1", features = ["full"] }
tokio-serial = { version = "5.4.4" }
console = { version = "0.15" }

clap = { version = "4" }
# config can not load
# config = { version = "-1.13.3" }

askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"

axum = { version = "0.7" }
# axum-login = { version = "0.13" }
# axum-messages = "0.3.0"
tower = { version = "0.4", features = ["util"] }
# tower-sessions = { version = "0.10.0", default-features = false }
# tower-sessions-sqlx-store = { version = "0.10.0", features = ["sqlite"] }

futures = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde_json = { version = "1.0" }

opentelemetry = { version = "0.21", features = ["metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["metrics", "rt-tokio"] }
opentelemetry-stdout = { version = "0.2", features = ["metrics"]}

# serialport = "3.2.2"
sigrok = { git = "https://github.com/cuprumwz/sigrok-rs.git" }
# sigrok = { git = "git@github.com:cuprumwz/sigrok-rs.git" }

async-trait = "0.1.74"
http = "1.0.0"
hyper = "1.0.1"
password-auth = "1.0.0"
serde = "1"
sqlx = { version = "0.7.3", features = ["sqlite", "time", "runtime-tokio"] }
time = "0.3.30"
